# gpattern

./: .gitignore  Makefile.am  autogen.sh  configure.ac
gpattern/: Makefile.am  gobservable.c  gobservable.h  gobserver.h  gpattern.h  gpatterntypes.h  greactivesubject.c  greactivesubject.h
src/: Makefile.am
src/collections/: gcollection.c  gcollection.h  gconcurrentdictionary.c  gconcurrentdictionary.h  gconcurrentqueue.c  gconcurrentqueue.h
src/document-application/: Makefile.am  gtkdocumentapplication.c  gtkdocumentapplication.h
src/message-center/: Makefile  gdistributedmessagecenter.c  gdistributedmessagecenter.h  gmessage.c  gmessage.h  gmessagecenter.c  gmessagecenter.h  testmessagecenter.c
src/observable/: Makefile.am  gobservable.c  gobservable.h  gobserver.c  gobserver.h  gpatterntypes.h  gpropertyreactivesubject.c  greactivesubject.c  greactivesubject.h
src/observable-collection/: gobservablecollection.c  gobservablecollection.h  testobservablecollection.c
tests/: Makefile.am  testobservable.c
